Sync a few config files with their counterparts in core

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
   "editor.rulers": [100],
   "editor.wordWrapColumn": 100,
 
-  "eslint.validate": ["javascript", "javascriptreact", "html", "typescriptreact"],
+  "eslint.validate": ["html", "javascript", "javascriptreact", "typescript", "typescriptreact"],
 
   "files.associations": {
+    "*.css": "tailwindcss",
+    "*.usj": "json",
     ".eslintignore": "ignore",
     ".prettierignore": "ignore",
     ".stylelintignore": "ignore"
